stream-information-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream-information-service
  labels:
    app: stream-information-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stream-information-service
  template:
    metadata:
      labels:
        app: stream-information-service
    spec:
      containers:
        - name: stream-information-service
          image: stream-information-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
