stream-information-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stream-information-httproute
spec:
  parentRefs:
  - name: my-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /streams/
      method: GET
    - path:
        type: PathPrefix
        value: /streams/
      method: PATCH
    - path:
        type: PathPrefix
        value: /streams
      method: DELETE
    backendRefs:
    - name: stream-information-service
      port: 8000
